# app/media_types.go
@@ -1,4 +1,4 @@
-// Code generated by goagen v1.3.0, DO NOT EDIT.
+// Code generated by goagen v1.3.1, DO NOT EDIT.
 //
 // API "user": Application Media Types
 //
@@ -6,7 +6,7 @@
 // $ goagen
 // --design=github.com/JormungandrK/user-microservice/design
 // --out=$(GOPATH)/src/github.com/JormungandrK/user-microservice
-// --version=v1.2.0-dirty
+// --version=v1.3.1
 
 package app
 
@@ -26,6 +26,8 @@ type Users struct {
 	ExternalID string `form:"externalId" json:"externalId" xml:"externalId"`
 	// Unique user ID
 	ID string `form:"id" json:"id" xml:"id"`
+	// List of namespaces this user belongs to
+	Namespaces []string `form:"namespaces,omitempty" json:"namespaces,omitempty" xml:"namespaces,omitempty"`
 	// List of organizations to which this user belongs to
 	Organizations []string `form:"organizations,omitempty" json:"organizations,omitempty" xml:"organizations,omitempty"`
 	// Roles of user
